# obs-newrelic-etl

./: .gitignore  Dockerfile  README.md  pyproject.toml
k8s/: secret
src/app/: main.py
src/app/utils/: aws_s3.py  nerdgraph_tools.py  tools.py
