[tool.poetry]
name = "obs-nr-etl"
version = "0.1.0"
description = "Extract data from table and dimensions from new relic, transform the data into parquet and store the files into a S3 bucket"
authors = ["Jaime Pegueroles <jaime.pegueroles@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE Version 3"
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.31.0"
boto3 = "^1.28.65"
botocore = "^1.31.65"
pyarrow = "^13.0.0"
numpy = "^1.26.1"
pandas = "^2.1.1"
newrelic = "^9.1.0"
json2html = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
myapp = "app.main:main"